# libavg_samplePlugin

./: CMakeLists.txt  LICENSE  README.md  maindiv.py  run.py  testApp.py
src/: MinimalPlugin.cpp  MinimalPluginNode.h  ProcessThread.cpp  ProcessThread.h
